Fix audio embed overflow, Fixes #167

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   2.3.4rc1 */
+   2.3.4rc2 */
 
 /* CSS variables */
 :root {
@@ -1736,6 +1736,7 @@ body.embed .detailed-status,
 .layout-multiple-columns .media-gallery,
 .layout-multiple-columns .media-gallery__gifv,
 .layout-multiple-columns .media-gallery__preview,
+.layout-multiple-columns .audio-player,
 .layout-multiple-columns .video-player {
   margin-left: calc(var(--size-avatar) + var(--gap-default));
   max-height: 430px;
