--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   2.3.4rc1 */
+   2.3.4rc2 */
 
 /* CSS variables */
 :root {
@@ -1839,6 +1839,7 @@ body.embed .detailed-status .video-player,
 .layout-single-column .media-gallery.media-gallery--layout-3,
 .layout-single-column .media-gallery.media-gallery--layout-4,
 .layout-single-column .media-gallery__preview,
+.layout-single-column .audio-player,
 .layout-single-column .video-player {
   max-height: 430px;
   /* stylelint-disable-next-line */
